--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -26,7 +26,7 @@ jobs:
         with:
           images: ghcr.io/${{ github.repository }}
 
-      - name: Build and push Docker image
+      - name: Build and push api Docker image
         uses: docker/build-push-action@v6
         with:
           context: .
@@ -34,3 +34,10 @@ jobs:
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
+
+
+
+# push all images
+# send to VPS compose file
+# stop already running compose files
+# run compose file on VPS
