--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -29,7 +29,7 @@ jobs:
       - name: Build and push api Docker image
         uses: docker/build-push-action@v6
         with:
-          context: .
+          context: ./api
           file: ./api/docker/prod.Dockerfile
           push: true
           tags: ${{ steps.meta.outputs.tags }}
