--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -8,7 +8,12 @@ on:
 jobs:
   build-and-push-image:
     name: Push images to Docker Hub
+
     runs-on: ubuntu-latest
+
+    permissions:
+      packages: write
+
     steps:
       - name: Check out the repo
         uses: actions/checkout@v4
